[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/vcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Tools/PCK Packer.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/UI/menuDesat.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.247059, 0.247059, 0.247059, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="PCK Packer" type="Node2D"]

[node name="BG" type="Sprite" parent="."]
modulate = Color( 0.364706, 0.360784, 0.411765, 1 )
position = Vector2( -116, -58 )
scale = Vector2( 1.095, 1.095 )
texture = ExtResource( 3 )
centered = false

[node name="Main Panel" type="Panel" parent="."]
margin_left = 942.0
margin_top = 262.0
margin_right = 1248.0
margin_bottom = 458.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Title" type="Label" parent="Main Panel"]
margin_left = 20.0
margin_top = 18.0
margin_right = 286.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "PCK Packer"
align = 1
valign = 1

[node name="Choose Files" type="Button" parent="Main Panel"]
margin_left = 14.0
margin_top = 57.0
margin_right = 294.0
margin_bottom = 93.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.894118, 0.894118, 0.894118, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
text = "Choose Files"

[node name="Reset Files" type="Button" parent="Main Panel"]
margin_left = 14.0
margin_top = 101.0
margin_right = 294.0
margin_bottom = 137.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.894118, 0.894118, 0.894118, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
text = "Reset Files"

[node name="Convert Button" type="Button" parent="Main Panel"]
margin_left = 14.0
margin_top = 143.0
margin_right = 294.0
margin_bottom = 179.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.894118, 0.894118, 0.894118, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
text = "Convert"

[node name="TextEdit" type="TextEdit" parent="Main Panel"]
margin_top = 209.0
margin_right = 307.0
margin_bottom = 449.0
show_line_numbers = true
smooth_scrolling = true

[node name="ChooseFiles" type="FileDialog" parent="."]
visible = true
margin_left = 11.0
margin_top = 25.0
margin_right = 921.0
margin_bottom = 694.0
window_title = "Open File(s)"
mode = 1

[connection signal="pressed" from="Main Panel/Choose Files" to="Main Panel" method="popup"]
[connection signal="pressed" from="Main Panel/Reset Files" to="Main Panel" method="reset_files"]
[connection signal="pressed" from="Main Panel/Convert Button" to="Main Panel" method="pack_pck"]
[connection signal="text_changed" from="Main Panel/TextEdit" to="Main Panel" method="update_files_from_text"]
[connection signal="file_selected" from="ChooseFiles" to="Main Panel" method="add_file"]
[connection signal="files_selected" from="ChooseFiles" to="Main Panel" method="add_files"]
